added images folder and images to it and added content to index.html page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,70 @@
     <title>Estate Movers</title>
 </head>
 <body>
+    <main>
+        <header>
+            <img src="images/estate_movers.png" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+                <a href=""Login></a>
+            </nav>
+
+        </header>
+        <div id="container">
+            <section>
+                <div id="images">
+                    <img src="images/house-use.png" alt="house image">
+                    <img src="images/road-removebg-preview.png" alt="road image">
+                    <img src="images/move-truck-removebg-preview.png" alt="lorry image">
+                    <img src="images/house2--preview.png" alt="house2 image">
+
+                </div>
+                <div id="tag">
+                    <p>
+                        Protect your property while moving and Relocation.
+                    </p>
+
+                </div>
+            </section>
+            <article>
+                <h1>Expert Estate Movers</h1>
+                <div>
+                    <h2>Why Us</h2>
+                    <p>orem Ipsum is simply dummy text of the 
+                        printing and typesetting industry. Lorem 
+                        Ipsum has been the industry's standard dummy 
+                        text ever since the 1500s, when an unknown printer 
+                        took a galley of type and scrambled it to make a type
+                         specimen book. It has survived not only
+                         five centuries, but also the leapontaining Lorem Ipsum 
+                         passages, and more recently with desktop publishing
+                    </p>
+                    <h2>Who Are We</h2>
+                    <p>
+                        Looking to move or relocate? We got you covered. We offer a variety of 
+                        moving and relocation services, ranging from packing in rough ion, TV mounting, and chandelier installation.
+                    </p>
+                </div>
+            </article>
+        </div>
+        <footer>
+            <div>Estate Movers &COPY; 2021</div>
+            <div>
+                <h3>Find us on:</h3>
+                <div>
+                    <p><img src="images/facebook-use.png" alt="facebook-image"><span>facebook</span></p>
+                    <p><img src="images/whatsapp-use.png" alt="whatsapp-image"><span>Whatsapp</span></p>
+                    <p><img src="images/twitter-use.png" alt="twitter-image"><span>twitter</span></p>
+                </div>
+
+            </div>
+        </footer>
+    </main>
     
 </body>
 </html>
